Make sure first panel doesn't look smaller since fixed namv is covering it

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -71,6 +71,15 @@
   height: 40px;
   margin: 0px auto;
 }
+/******************************************************************************
+ Page Containers
+ ******************************************************************************/
+
+.marketing {
+  // Otherwise the nav is sitting on top of the first panel
+  // And that makes it effectively a look smaller than desired
+  padding-top: 70px;
+}
 
 /******************************************************************************
  Panel 1
